--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello world</h1>
-    <h4>welcome to my web_portfolio</h4>
+    <header id="header" class="section header_section">
+        <div class="section-wrapper">
+            <div class="section-box section-text">
+                <h2>welcome to</h2>
+                <h1><span>Monjur</span> Website</h1>
+                <h4>World-class professional web developer</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic nihil architecto dolore odit eaque, quasi libero. Sunt reiciendis illo excepturi vero. Magnam et laudantium asperiores, nesciunt ipsum voluptas officiis quasi.</p>
+                <a href="#" class="button">HIRE ME</a>
+
+            </div>
+            <div class="section-box section-image">
+                <img src="images/monjur.png" alt="">
+            </div>
+        </div>
+    </header>
 </body>
 </html>
