--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header id="header" class="section header_section">
+      <div class="container">
         <div class="section-wrapper">
             <div class="section-box section-text">
                 <h2>welcome to</h2>
@@ -22,6 +23,43 @@
                 <img src="images/monjur.png" alt="">
             </div>
         </div>
+      </div>
     </header>
+    <section class="section dream_section">
+        <div class="container">
+            <div class="section-wrapper">
+                <div class="section-box section-image">
+                    <img src="images/monjur2.png" alt="">
+                </div>
+                <div class="section-box section-text">
+                    <h1>Dream big</h1>
+                    <h3>Become a web developer</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic nihil architecto dolore odit eaque, quasi libero. Sunt reiciendis illo excepturi vero. Magnam et laudantium asperiores, nesciunt ipsum voluptas officiis quasi.</p>
+                    <a href="#" class="button resume-btn">DOWNLOAD RESUME</a>
+    
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="experience-section section">
+        <h1>Experiences</h1>
+        <div class="container">
+            <div class="section-wrapper experience-box-wrapper">
+                <div class="experience-box fullstack-dev">
+                    <h2>Full Stack Web Developer</h2>
+                    <h4>2021-Present | Pro Level Web Developer</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro quidem consequatur, amet labore laboriosam tenetur perferendis illo commodi nam facilis vero distinctio similique. Magnam tempora maiores optio quod, eius sed ipsam itaque, facere voluptatibus illum commodi autem adipisci? Distinctio eum perferendis saepe molestias odio aliquid quae voluptate ipsum enim excepturi.</p>
+                </div>
+                <div class="experience-box baby-dev">
+                    <h2>Baby Web Developer</h2>
+                    <h4>2020-2021 | Programming Hero Learner</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro quidem consequatur, amet labore laboriosam tenetur perferendis illo commodi nam facilis vero distinctio similique. Magnam tempora maiores optio quod, eius sed ipsam itaque, facere voluptatibus illum commodi autem adipisci? Distinctio eum perferendis saepe molestias odio aliquid quae voluptate ipsum enim excepturi.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>&copy; All Right Reserved by WebMonjur</p>
+    </footer>
 </body>
 </html>
